[gd_scene load_steps=15 format=2]

[ext_resource path="res://Custom_env.tres" type="Environment" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MansionWorldEnvironment.gd" type="Script" id=3]
[ext_resource path="res://Sounds/Camera.wav" type="AudioStream" id=4]
[ext_resource path="res://Mansion_Blocks.tres" type="MeshLibrary" id=5]
[ext_resource path="res://Scripts/ShootTimer.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PlayerRayCast.gd" type="Script" id=7]
[ext_resource path="res://Scripts/DrawLine2D.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=9]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( -25.4, 2.1, -7.8, -25.4, 2.1, -0.599998, -19.4, 2.1, -0.599998, -19.4, 2.1, -29.4, -25.4, 2.1, -29.4, -25.4, 2.1, -22.2, -6.8, 2.1, -0.599998, -0.499998, 2.1, -0.599998, -0.499998, 2.1, -7.8, -0.499998, 2.1, -22.2, -0.499998, 2.1, -29.4, -6.8, 2.1, -29.4, -25.4, 2.1, -7.8, -19.4, 2.1, -0.599998, -13.1, 2.1, -0.599998, -13.1, 2.1, -29.4, -19.4, 2.1, -29.4, -25.4, 2.1, -22.2, -25.4, 2.1, -15, -13.1, 2.1, -0.599998, -6.8, 2.1, -0.599998, -0.499998, 2.1, -7.8, -0.499998, 2.1, -22.2, -6.8, 2.1, -29.4, -13.1, 2.1, -29.4, -0.499998, 2.1, -15, -25.4, 2.1, -15, -25.4, 2.1, -7.8, -13.1, 2.1, -0.599998, -0.499998, 2.1, -7.8, -0.499998, 2.1, -15, -13.1, 2.1, -29.4 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 14, 13, 12 ), PoolIntArray( 16, 15, 17 ), PoolIntArray( 17, 15, 18 ), PoolIntArray( 19, 21, 20 ), PoolIntArray( 23, 22, 24 ), PoolIntArray( 24, 22, 25 ), PoolIntArray( 27, 26, 28 ), PoolIntArray( 28, 26, 29 ), PoolIntArray( 29, 26, 30 ), PoolIntArray( 30, 26, 31 ) ]
cell/size = 1.0
cell/height = 0.75

[sub_resource type="CubeMesh" id=4]

[sub_resource type="BoxShape" id=5]

[node name="Spatial" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 2.39897, -15 )
script = ExtResource( 2 )

[node name="PlayerCollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="PlayerMesh" type="MeshInstance" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.804362, -0.921802 )

[node name="PlayerRayCast" type="RayCast" parent="Player/Camera"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000361919, -0.000198364 )
enabled = true
cast_to = Vector3( 0, 0, -50 )
collide_with_areas = true
script = ExtResource( 7 )

[node name="Line2D" type="Line2D" parent="Player/Camera"]
pause_mode = 2
points = PoolVector2Array( 500, 480 )
width = 2.0
default_color = Color( 1, 0, 0, 1 )
script = ExtResource( 8 )

[node name="ShootTimer" type="Timer" parent="Player"]
pause_mode = 2
one_shot = true
script = ExtResource( 6 )

[node name="CameraSound" type="AudioStreamPlayer" parent="Player"]
pause_mode = 2
stream = ExtResource( 4 )

[node name="Map" type="Spatial" parent="."]

[node name="Roof" type="GridMap" parent="Map"]
mesh_library = ExtResource( 5 )
cell_scale = 2.0
data = {
"cells": PoolIntArray( 262131, 65521, 1048650, 262132, 65521, 1048650, 262133, 65521, 1048650, 262134, 65521, 1048650, 262135, 65521, 1048650, 262136, 65521, 1048650, 262137, 65521, 1048650, 262138, 65521, 1048650, 262139, 65521, 1048650, 262140, 65521, 1048650, 262141, 65521, 1048650, 262142, 65521, 1048650, 262143, 65521, 1048650, 262131, 65522, 1048650, 262132, 65522, 1048650, 262133, 65522, 1048650, 262134, 65522, 1048650, 262135, 65522, 1048650, 262136, 65522, 1048650, 262137, 65522, 1048650, 262138, 65522, 1048650, 262139, 65522, 1048650, 262140, 65522, 1048650, 262141, 65522, 1048650, 262142, 65522, 1048650, 262143, 65522, 1048650, 262131, 65523, 1048650, 262132, 65523, 1048650, 262133, 65523, 1048650, 262134, 65523, 1048650, 262135, 65523, 1048650, 262136, 65523, 1048650, 262137, 65523, 1048650, 262138, 65523, 1048650, 262139, 65523, 1048650, 262140, 65523, 1048650, 262141, 65523, 1048650, 262142, 65523, 1048650, 262143, 65523, 1048650, 262131, 65524, 1048650, 262132, 65524, 1048650, 262133, 65524, 1048650, 262134, 65524, 1048650, 262135, 65524, 1048650, 262136, 65524, 1048650, 262137, 65524, 1048650, 262138, 65524, 1048650, 262139, 65524, 1048650, 262140, 65524, 1048650, 262141, 65524, 1048650, 262142, 65524, 1048650, 262143, 65524, 1048650, 262131, 65525, 1048650, 262132, 65525, 1048650, 262133, 65525, 1048650, 262134, 65525, 1048650, 262135, 65525, 1048650, 262136, 65525, 1048650, 262137, 65525, 1048650, 262138, 65525, 1048650, 262139, 65525, 1048650, 262140, 65525, 1048650, 262141, 65525, 1048650, 262142, 65525, 1048650, 262143, 65525, 1048650, 262131, 65526, 1048650, 262132, 65526, 1048650, 262133, 65526, 1048650, 262134, 65526, 1048650, 262135, 65526, 1048650, 262136, 65526, 1048650, 262137, 65526, 1048650, 262138, 65526, 1048650, 262139, 65526, 1048650, 262140, 65526, 1048650, 262141, 65526, 1048650, 262142, 65526, 1048650, 262143, 65526, 1048650, 262131, 65527, 1048650, 262132, 65527, 1048650, 262133, 65527, 1048650, 262134, 65527, 1048650, 262135, 65527, 1048650, 262136, 65527, 1048650, 262137, 65527, 1048650, 262138, 65527, 1048650, 262139, 65527, 1048650, 262140, 65527, 1048650, 262141, 65527, 1048650, 262142, 65527, 1048650, 262143, 65527, 1048650, 262131, 65528, 1048650, 262132, 65528, 1048650, 262133, 65528, 1048650, 262134, 65528, 1048650, 262135, 65528, 1048650, 262136, 65528, 1048650, 262137, 65528, 1048650, 262138, 65528, 1048650, 262139, 65528, 1048650, 262140, 65528, 1048650, 262141, 65528, 1048650, 262142, 65528, 1048650, 262143, 65528, 1048650, 262131, 65529, 1048650, 262132, 65529, 1048650, 262133, 65529, 1048650, 262134, 65529, 1048650, 262135, 65529, 1048650, 262136, 65529, 1048650, 262137, 65529, 1048650, 262138, 65529, 1048650, 262139, 65529, 1048650, 262140, 65529, 1048650, 262141, 65529, 1048650, 262142, 65529, 1048650, 262143, 65529, 1048650, 262131, 65530, 1048650, 262132, 65530, 1048650, 262133, 65530, 1048650, 262134, 65530, 1048650, 262135, 65530, 1048650, 262136, 65530, 1048650, 262137, 65530, 1048650, 262138, 65530, 1048650, 262139, 65530, 1048650, 262140, 65530, 1048650, 262141, 65530, 1048650, 262142, 65530, 1048650, 262143, 65530, 1048650, 262131, 65531, 1048650, 262132, 65531, 1048650, 262133, 65531, 1048650, 262134, 65531, 1048650, 262135, 65531, 1048650, 262136, 65531, 1048650, 262137, 65531, 1048650, 262138, 65531, 1048650, 262139, 65531, 1048650, 262140, 65531, 1048650, 262141, 65531, 1048650, 262142, 65531, 1048650, 262143, 65531, 1048650, 262131, 65532, 1048650, 262132, 65532, 1048650, 262133, 65532, 1048650, 262134, 65532, 1048650, 262135, 65532, 1048650, 262136, 65532, 1048650, 262137, 65532, 1048650, 262138, 65532, 1048650, 262139, 65532, 1048650, 262140, 65532, 1048650, 262141, 65532, 1048650, 262142, 65532, 1048650, 262143, 65532, 1048650, 262131, 65533, 1048650, 262132, 65533, 1048650, 262133, 65533, 1048650, 262134, 65533, 1048650, 262135, 65533, 1048650, 262136, 65533, 1048650, 262137, 65533, 1048650, 262138, 65533, 1048650, 262139, 65533, 1048650, 262140, 65533, 1048650, 262141, 65533, 1048650, 262142, 65533, 1048650, 262143, 65533, 1048650, 262131, 65534, 1048650, 262132, 65534, 1048650, 262133, 65534, 1048650, 262134, 65534, 1048650, 262135, 65534, 1048650, 262136, 65534, 1048650, 262137, 65534, 1048650, 262138, 65534, 1048650, 262139, 65534, 1048650, 262140, 65534, 1048650, 262141, 65534, 1048650, 262142, 65534, 1048650, 262143, 65534, 1048650, 262131, 65535, 1048650, 262132, 65535, 1048650, 262133, 65535, 1048650, 262134, 65535, 1048650, 262135, 65535, 1048650, 262136, 65535, 1048650, 262137, 65535, 1048650, 262138, 65535, 1048650, 262139, 65535, 1048650, 262140, 65535, 1048650, 262141, 65535, 1048650, 262142, 65535, 1048650, 262143, 65535, 1048650 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Walls" type="GridMap" parent="Map"]
mesh_library = ExtResource( 5 )
cell_scale = 2.0
data = {
"cells": PoolIntArray( 65523, 0, 118, 65524, 0, 72, 65526, 0, 118, 65527, 0, 72, 65529, 0, 118, 65530, 0, 72, 65532, 0, 118, 65533, 0, 72, 65535, 0, 118, 131059, 0, 118, 131062, 0, 118, 131065, 0, 118, 131068, 0, 118, 131071, 0, 118, 196595, 0, 118, 196596, 0, 118, 196597, 0, 118, 196598, 0, 118, 196599, 0, 118, 196600, 0, 118, 196601, 0, 118, 196602, 0, 118, 196603, 0, 118, 196604, 0, 118, 196605, 0, 118, 196606, 0, 118, 196607, 0, 118, 65523, 65520, 655478, 65525, 65520, 655432, 65526, 65520, 655478, 65528, 65520, 655432, 65529, 65520, 655478, 65531, 65520, 655432, 65532, 65520, 655478, 65534, 65520, 655432, 65535, 65520, 655478, 131059, 65520, 655478, 131062, 65520, 655478, 131065, 65520, 655478, 131068, 65520, 655478, 131071, 65520, 655478, 196595, 65520, 655478, 196596, 65520, 655478, 196597, 65520, 655478, 196598, 65520, 655478, 196599, 65520, 655478, 196600, 65520, 655478, 196601, 65520, 655478, 196602, 65520, 655478, 196603, 65520, 655478, 196604, 65520, 655478, 196605, 65520, 655478, 196606, 65520, 655478, 196607, 65520, 655478, 0, 65521, 1048694, 65522, 65521, 1441910, 65536, 65521, 1048694, 131058, 65521, 1441910, 131072, 65521, 1048694, 196594, 65521, 1441910, 0, 65522, 1048694, 65522, 65522, 1441910, 65536, 65522, 1048694, 131058, 65522, 1441910, 131072, 65522, 1048694, 196594, 65522, 1441910, 65522, 65523, 1441864, 131072, 65523, 1048694, 196594, 65523, 1441910, 0, 65524, 1048648, 131072, 65524, 1048694, 196594, 65524, 1441910, 0, 65525, 1048694, 65522, 65525, 1441910, 65536, 65525, 1048694, 131058, 65525, 1441910, 131072, 65525, 1048694, 196594, 65525, 1441910, 65522, 65526, 1441864, 131072, 65526, 1048694, 196594, 65526, 1441910, 0, 65527, 1048648, 131072, 65527, 1048694, 196594, 65527, 1441910, 0, 65528, 1048694, 65522, 65528, 1441910, 65536, 65528, 1048694, 131058, 65528, 1441910, 131072, 65528, 1048694, 196594, 65528, 1441910, 65522, 65529, 1441864, 131072, 65529, 1048694, 196594, 65529, 1441910, 0, 65530, 1048648, 131072, 65530, 1048694, 196594, 65530, 1441910, 0, 65531, 1048694, 65522, 65531, 1441910, 65536, 65531, 1048694, 131058, 65531, 1441910, 131072, 65531, 1048694, 196594, 65531, 1441910, 65522, 65532, 1441864, 131072, 65532, 1048694, 196594, 65532, 1441910, 0, 65533, 1048648, 131072, 65533, 1048694, 196594, 65533, 1441910, 0, 65534, 1048694, 65522, 65534, 1441910, 65536, 65534, 1048694, 131058, 65534, 1441910, 131072, 65534, 1048694, 196594, 65534, 1441910, 0, 65535, 1048694, 65522, 65535, 1441910, 65536, 65535, 1048694, 131058, 65535, 1441910, 131072, 65535, 1048694, 196594, 65535, 1441910 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Navigation" type="Navigation" parent="Map"]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Map/Navigation"]
navmesh = SubResource( 3 )

[node name="Floor" type="GridMap" parent="Map/Navigation/NavigationMeshInstance"]
mesh_library = ExtResource( 5 )
cell_scale = 2.0
data = {
"cells": PoolIntArray( 65523, 65521, 74, 65524, 65521, 74, 65525, 65521, 74, 65526, 65521, 74, 65527, 65521, 74, 65528, 65521, 74, 65529, 65521, 74, 65530, 65521, 74, 65531, 65521, 74, 65532, 65521, 74, 65533, 65521, 74, 65534, 65521, 74, 65535, 65521, 74, 65523, 65522, 74, 65524, 65522, 74, 65525, 65522, 74, 65526, 65522, 74, 65527, 65522, 74, 65528, 65522, 74, 65529, 65522, 74, 65530, 65522, 74, 65531, 65522, 74, 65532, 65522, 74, 65533, 65522, 74, 65534, 65522, 74, 65535, 65522, 74, 65523, 65523, 74, 65524, 65523, 74, 65525, 65523, 74, 65526, 65523, 74, 65527, 65523, 74, 65528, 65523, 74, 65529, 65523, 74, 65530, 65523, 74, 65531, 65523, 74, 65532, 65523, 74, 65533, 65523, 74, 65534, 65523, 74, 65535, 65523, 74, 65523, 65524, 74, 65524, 65524, 74, 65525, 65524, 74, 65526, 65524, 74, 65527, 65524, 74, 65528, 65524, 74, 65529, 65524, 74, 65530, 65524, 74, 65531, 65524, 74, 65532, 65524, 74, 65533, 65524, 74, 65534, 65524, 74, 65535, 65524, 74, 65523, 65525, 74, 65524, 65525, 74, 65525, 65525, 74, 65526, 65525, 74, 65527, 65525, 74, 65528, 65525, 74, 65529, 65525, 74, 65530, 65525, 74, 65531, 65525, 74, 65532, 65525, 74, 65533, 65525, 74, 65534, 65525, 74, 65535, 65525, 74, 65523, 65526, 74, 65524, 65526, 74, 65525, 65526, 74, 65526, 65526, 74, 65527, 65526, 74, 65528, 65526, 74, 65529, 65526, 74, 65530, 65526, 74, 65531, 65526, 74, 65532, 65526, 74, 65533, 65526, 74, 65534, 65526, 74, 65535, 65526, 74, 65523, 65527, 74, 65524, 65527, 74, 65525, 65527, 74, 65526, 65527, 74, 65527, 65527, 74, 65528, 65527, 74, 65529, 65527, 74, 65530, 65527, 74, 65531, 65527, 74, 65532, 65527, 74, 65533, 65527, 74, 65534, 65527, 74, 65535, 65527, 74, 65523, 65528, 74, 65524, 65528, 74, 65525, 65528, 74, 65526, 65528, 74, 65527, 65528, 74, 65528, 65528, 74, 65529, 65528, 74, 65530, 65528, 74, 65531, 65528, 74, 65532, 65528, 74, 65533, 65528, 74, 65534, 65528, 74, 65535, 65528, 74, 65523, 65529, 74, 65524, 65529, 74, 65525, 65529, 74, 65526, 65529, 74, 65527, 65529, 74, 65528, 65529, 74, 65529, 65529, 74, 65530, 65529, 74, 65531, 65529, 74, 65532, 65529, 74, 65533, 65529, 74, 65534, 65529, 74, 65535, 65529, 74, 65523, 65530, 74, 65524, 65530, 74, 65525, 65530, 74, 65526, 65530, 74, 65527, 65530, 74, 65528, 65530, 74, 65529, 65530, 74, 65530, 65530, 74, 65531, 65530, 74, 65532, 65530, 74, 65533, 65530, 74, 65534, 65530, 74, 65535, 65530, 74, 65523, 65531, 74, 65524, 65531, 74, 65525, 65531, 74, 65526, 65531, 74, 65527, 65531, 74, 65528, 65531, 74, 65529, 65531, 74, 65530, 65531, 74, 65531, 65531, 74, 65532, 65531, 74, 65533, 65531, 74, 65534, 65531, 74, 65535, 65531, 74, 65523, 65532, 74, 65524, 65532, 74, 65525, 65532, 74, 65526, 65532, 74, 65527, 65532, 74, 65528, 65532, 74, 65529, 65532, 74, 65530, 65532, 74, 65531, 65532, 74, 65532, 65532, 74, 65533, 65532, 74, 65534, 65532, 74, 65535, 65532, 74, 65523, 65533, 74, 65524, 65533, 74, 65525, 65533, 74, 65526, 65533, 74, 65527, 65533, 74, 65528, 65533, 74, 65529, 65533, 74, 65530, 65533, 74, 65531, 65533, 74, 65532, 65533, 74, 65533, 65533, 74, 65534, 65533, 74, 65535, 65533, 74, 65523, 65534, 74, 65524, 65534, 74, 65525, 65534, 74, 65526, 65534, 74, 65527, 65534, 74, 65528, 65534, 74, 65529, 65534, 74, 65530, 65534, 74, 65531, 65534, 74, 65532, 65534, 74, 65533, 65534, 74, 65534, 65534, 74, 65535, 65534, 74, 65523, 65535, 74, 65524, 65535, 74, 65525, 65535, 74, 65526, 65535, 74, 65527, 65535, 74, 65528, 65535, 74, 65529, 65535, 74, 65530, 65535, 74, 65531, 65535, 74, 65532, 65535, 74, 65533, 65535, 74, 65534, 65535, 74, 65535, 65535, 74 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Enemy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.36148, 2.38157, -23.7656 )
script = ExtResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Enemy"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Enemy"]
shape = SubResource( 5 )

[node name="UpdatePathToPlayerTimer" type="Timer" parent="Enemy"]
wait_time = 0.5

[node name="WanderPos1" type="Position3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -2 )

[node name="WanderPos2" type="Position3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 20 )

[node name="WanderPos3" type="Position3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 20 )

[node name="WanderPos4" type="Position3D" parent="Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -3 )

[connection signal="timeout" from="Player/ShootTimer" to="Player/ShootTimer" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="Enemy/UpdatePathToPlayerTimer" to="Enemy" method="_on_UpdatePathToPlayerTimer_timeout"]
